# first_dictionary_robot

./: CMakeLists.txt  README.md  package.xml
launch/: ntarobot_services.launch.py
msg/: StateActionC.msg
ntarobot_services/: move_pose.py  relative_pose.py  robot_state.py  stop_all.py
srv/: MoveToPose.srv  RelativeMove.srv  SetStatus.srv  ValidateGoal.srv
